updates Java part